--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jekyll website</title>
-    <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }}
+    <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }} />
 </head>
 <body>
-    <main>
+    <main class="container">
+        {% include navigation.html %}
         {{ content }}
     </main>
 </body>
