--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,8 @@
 <nav>
-    
+    <ul>
+        <li><a href="#">Dave Dev</a></li>
+        <li><a href="#about">Home</a></li>
+        <li><a href="#experience">Posts</a></li>
+        <li"><span></span></li>
+    </ul>
 </nav>
