--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
-<nav>
-    <ul>
-        <li><a href="#">Dave Dev</a></li>
-        <li><a href="#about">Home</a></li>
-        <li><a href="#experience">Posts</a></li>
+<nav class="navigation">
+    <ul class="navigation__items">
+        <li class="navigation__item navigation__item--logo"><a class="navigation__text" href="#"><span><span>Dave</span><span>Dev</span></a></li>
+        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="#about">Home</a></li>
+        <li class="navigation__item navigation__item--link"><a class="navigation__text navigation__text--link" href="#experience">Posts</a></li>
         <li"><span></span></li>
     </ul>
 </nav>
