--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,2 +1,3 @@
-$background-color: #343434;
-$text-color: #fff;
+$main-background-color: #343434;
+$secondary-background-color: #535353;
+$main-text-color: #fff;
