--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }} />
 </head>
 <body>
-    <main class="container">
+    <main>
         {% include navigation.html %}
-        {{ content }}
+        <section class="content container">
+            {{ content }}
+        </section>
     </main>
+    <script src="{{ "assets/js/main.js" | relative_url }}"></script>
 </body>
 </html>
