--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -2,3 +2,4 @@ $main-background-color: #343434;
 $secondary-background-color: #535353;
 $main-text-color: #fff;
 $selected-blue-color: #00a7b1;
+$shadow-color: rgba(0, 0 , 0, .25);
