--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,8 +17,8 @@ html {
   }
   
   body {
-    color: $text-color;
-    background: $background-color;
+    color: $main-text-color;
+    background: $main-background-color;
     width: 100%;
     height: 100%;
   }
