Display temporary footer in default layout, but in wrong place

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,12 @@
 <body>
     <main>
         {% include navigation.html %}
+        
         <section class="content container">
             {{ content }}
         </section>
+
+        {% include footer.html %}
     </main>
     <script src="{{ "assets/js/main.js" | relative_url }}"></script>
 </body>
