--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer>
-    
+<footer class="footer">
+    <section class="container">
+        <p>Temp footer content</p>
+    </section>
 </footer>
