Fix footer positioning

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }} />
 </head>
 <body>
-    <main>
+    <main class="main">
         {% include navigation.html %}
         
         <section class="content container">
