--- a/_sass/modules/navigation.scss
+++ b/_sass/modules/navigation.scss
@@ -3,8 +3,8 @@
     padding: 1rem 1.5rem;
     width: 100%;
     z-index: 1;
-    position: fixed;
     top: 0;
+    position: sticky;
     box-shadow: 0 4px 4px $shadow-color;
     grid-row-start: 1;
     grid-row-end: 2;
