--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,5 +1,9 @@
+// background colors
 $main-background-color: #343434;
 $secondary-background-color: #535353;
+$tertiary-background-color: #2d2d2d;
+// text colors
 $main-text-color: #fff;
 $selected-blue-color: #00a7b1;
+// shadow colors
 $shadow-color: rgba(0, 0 , 0, .25);
