Fix display icon in social btns

--- a/_sass/modules/footer.scss
+++ b/_sass/modules/footer.scss
@@ -27,6 +27,7 @@ $icon_factor: calc(#{$social_icon_size / #{$social_icon_size_original}});
     width: $social_icon_size;
     height: $social_icon_size;
     position: relative;
+    margin-right: .25rem;
     
     &__background {
         width: $social_icon_size;
@@ -50,7 +51,7 @@ $icon_factor: calc(#{$social_icon_size / #{$social_icon_size_original}});
             width: $imageWidth;
             height: $imageHeight;
 
-            top: calc(#{$heightBg} / 2 - #{$imageWidth} / 2);
+            top: calc(#{$heightBg} / 2 - #{$imageHeight} / 2);
             left: calc(#{$widthBg} / 2 - #{$imageWidth} / 2);
             content: url($imgSrc);
         }
