Start work at header layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,17 @@
         {% include navigation.html %}
         
         <section class="content container">
-            {{ content }}
+            <header class="header">
+
+                <div class="placeholder placeholder__main"></div>
+                <div class="secondary">
+                    <div class="placeholder placeholder__second"></div>
+                    <div class="placeholder placeholder__third"></div>
+                </div>
+                <!-- <article class="banner banner__main"> -->
+                    <!-- <img class="banner banner_image" src="../assets/img/temp/polyCave.jpg" /> -->
+                </article>
+            </header>
         </section>
 
         {% include footer.html %}
