--- a/_sass/devices.scss
+++ b/_sass/devices.scss
@@ -1,3 +1,10 @@
-$desktop: 1125px;
+$desktop: 1020px;
 $tablet: 768px;
 $mobile: 480px;
+
+$large-screen-min-width: 992px;
+$medium-screen-min-width: 768px;
+
+$large-screen-container-width: 960px;
+$medium-screen-container-width: 720px;
+$small-screen-container-width: 540px;
