--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,18 @@
         <section class="content container">
             <header class="header">
 
-                <div class="placeholder placeholder__main"></div>
-                <div class="secondary">
-                    <div class="placeholder placeholder__second"></div>
-                    <div class="placeholder placeholder__third"></div>
+                <div class="banner banner--radius banner__main">
+                    <img class="banner--radius banner__image" src="../assets/img/temp/polyCave.jpg"/>
+                    <div class="banner__overlay banner--radius"></div>
                 </div>
-                <!-- <article class="banner banner__main"> -->
-                    <!-- <img class="banner banner_image" src="../assets/img/temp/polyCave.jpg" /> -->
-                </article>
+                <div class="banner banner--radius banner__secondary">
+                    <img class="banner--radius banner__image" src="../assets/img/temp/sunset.jpeg"/>
+                    <div class="banner__overlay banner--radius"></div>
+                </div>
+                <div class="banner banner--radius banner__secondary">
+                    <img class="banner--radius banner__image" src="../assets/img/temp/waterfall.jpeg"/>
+                    <div class="banner__overlay banner--radius"></div>
+                </div>
             </header>
         </section>
 
