Add simple responsive for header section Fix footer center position

--- a/_sass/modules/footer.scss
+++ b/_sass/modules/footer.scss
@@ -82,4 +82,5 @@ $icon_factor: calc(#{$social_icon_size / #{$social_icon_size_original}});
     display: flex;
     justify-content: center;
     list-style: none;
+    padding-inline-start: 0;
 }
