--- a/_sass/modules/header.scss
+++ b/_sass/modules/header.scss
@@ -6,12 +6,24 @@
         grid-area: 1 / 1 / 2 / 3;
         max-height: 500px;
         position: relative;
+
+        @media screen and (max-width: $medium-screen-min-width) {
+            grid-area: auto;
+            grid-area: 1 / 1 / 2 / 2;
+            max-height: 300px;
+        }
     }
 
     &__secondary {
         grid-row-start: 2;
         max-height: 250px;
         position: relative;
+
+        @media screen and (max-width: $medium-screen-min-width) {
+            grid-row-start: auto;
+            grid-area: auto;
+            max-height: 200px;
+        }
     }
 
     &__image {
@@ -44,8 +56,13 @@
     // width: clac(100% - calc(2 * 2rem));
     max-width: $desktop;
     display: grid;
-    row-gap: 1rem;
-    column-gap: 1rem;
+    gap: 1rem;
     grid-template-rows: 2fr 1fr;
     grid-template-columns: repeat(2, 1fr);
+
+    @media screen and (max-width: $medium-screen-min-width) {
+        grid-template-rows: 1.5fr 1fr;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
 }
