--- a/_sass/modules/header.scss
+++ b/_sass/modules/header.scss
@@ -1,5 +1,55 @@
 .banner {
     box-shadow: 0 8px 4px $shadow-color;
+    font-family: "Inter";
+    text-shadow: 1px 2px 2px $shadow-color;
+
+    &__content {
+        padding: 0 2rem;
+        width: 80%;
+        height: 100%;
+        max-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+
+        &--secondary {
+            width: 100%;
+            padding: 0 1rem;
+        }
+    }
+
+    &__author {
+        font-size: 0.75rem;
+        font-weight: 500;
+    }
+
+    &__author--name {
+        font-weight: 200;
+    }
+
+    &__title {
+        font-size: 2rem;
+        font-weight: normal;
+
+        &--secondary {
+            font-size: 1.5rem;
+        }
+    }
+
+    &__short {
+        font-size: 1rem;
+        font-weight: 300;
+        margin: 0 0 .5rem 0;
+
+        &--secondary {
+            font-size: 1rem;
+        }
+    }
+
+    &__link {
+        text-decoration: none;
+        color: $main-text-color;
+    }
 
     &__main {
         max-width: $desktop;
