Add new banner include with parameters

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,52 +16,23 @@
         <section class="content container">
             <header class="header">
 
-                <div class="banner banner--radius banner__main">
-                    <img class="banner--radius banner__image" src="../assets/img/temp/polyCave.jpg" />
-                    <a class="banner__link" href="#">
-                        <div class="banner__overlay banner--radius">
-                            <div class="banner__content">
-                                <h1 class="banner__title">Post title</h1>
-                                <p class="banner__short"> {{ "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eveniet omnis vitae. Totam facere maxime magni impedit magnam voluptatem saepe numquam vel, fuga pariatur labore vitae corporis exercitationem, quo inventore earum autem eius sapiente neque expedita quis quasi ut possimus sed! Distinctio voluptatum itaque fuga laborum ad rerum voluptas possimus!" | truncate: 300, "..." }}</p>
-                                <p>
-                                    <span class="banner__author">Author: </span>
-                                    <span class="banner__author banner__author--name">Dave Donor</span>
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                {% include banner.html type='main' 
+                image='assets/img/temp/polyCave.jpg'
+                maxLength='200'
+                author='Dave Donor'
+                title='Post Title'
+                brief='Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam unde sunt beatae quisquam, ad repudiandae nobis molestias quis nam ea, atque recusandae eaque placeat rem optio natus aliquid porro hic quam. Reiciendis corporis harum quibusdam expedita eius, qui doloribus distinctio tempore quod. Beatae tempore ipsum molestias deleniti. Voluptatibus maiores, quis iure aliquid unde alias fugiat illo praesentium voluptates sed quos tempora vero laudantium perspiciatis animi aspernatur nobis molestias ducimus accusantium officiis est nostrum voluptatem dolores libero. Ratione quo repellendus rerum atque nihil, expedita nisi doloribus sapiente non voluptas porro quisquam nam eos? Reprehenderit dolores reiciendis pariatur inventore repellendus repellat doloremque ex unde veritatis illo asperiores, dolore fugiat velit consectetur impedit sed non quisquam vitae, maiores alias ducimus, incidunt temporibus laudantium! Praesentium alias repellat, voluptate ad beatae voluptatibus magni delectus? Mollitia velit quos ipsa minus nam. Harum ipsam, magni quisquam ab eos distinctio molestiae odit sunt aliquam et voluptate. Dolorum ipsam accusamus nobis architecto temporibus, quia, facilis laborum voluptatem deleniti amet quaerat ducimus? Est, itaque deleniti? Earum eius veritatis fuga, nesciunt facere, odio modi similique vitae, incidunt asperiores recusandae repudiandae rerum repellat dicta soluta. Obcaecati, dolorem sit atque numquam reprehenderit vel quo repellendus voluptate aliquid nemo fugiat dolores! Ipsa quia quisquam fuga, tempora nisi ratione totam consequuntur dolorem beatae velit? Quod tenetur praesentium totam impedit corrupti exercitationem mollitia voluptatibus ut possimus. Deleniti unde quo nemo doloribus veniam deserunt modi vel quaerat quod at ducimus, totam similique? Cupiditate ipsum velit quod hic consequuntur ut, ab expedita nulla officiis voluptatem labore? Dolores, fugiat, molestiae dolore exercitationem id animi quaerat asperiores quae optio odio facilis omnis ea corrupti suscipit eveniet atque temporibus ipsam facere ipsum expedita, a nulla. Mollitia et tempore accusamus eligendi nulla, voluptatum vitae facere commodi quisquam veniam aliquam aperiam? Neque animi magni cumque culpa earum accusamus aliquid quae doloremque, consequuntur sapiente aperiam eaque possimus debitis incidunt, ut, soluta corporis ipsum. Autem facere at perspiciatis tempora in saepe molestiae unde magnam, eaque laborum laudantium et doloribus vero temporibus odit? Necessitatibus similique, nisi nihil ea commodi quisquam autem iure enim harum veniam quibusdam aliquam ut libero possimus voluptas totam repellat illum non!' %}
 
-                <div class="banner banner--radius banner__secondary">
-                    <img class="banner--radius banner__image" src="../assets/img/temp/sunset.jpeg" />
-                    <a class="banner__link" href="#">
-                        <div class="banner__overlay banner--radius">
-                            <div class="banner__content  banner__content--secondary">
-                                <h1 class="banner__title banner__title--secondary">Post title</h1>
-                                <p class="banner__short banner__short--secondary"> {{ "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eveniet omnis vitae. Totam facere maxime magni impedit magnam voluptatem saepe numquam vel, fuga pariatur labore vitae corporis exercitationem, quo inventore earum autem eius sapiente neque expedita quis quasi ut possimus sed! Distinctio voluptatum itaque fuga laborum ad rerum voluptas possimus!" | truncate: 150, "..." }}</p>
-                                <p>
-                                    <span class="banner__author">Author: </span>
-                                    <span class="banner__author banner__author--name">Dave Donor</span>
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="banner banner--radius banner__secondary">
-                    <img class="banner--radius banner__image" src="../assets/img/temp/waterfall.jpeg" />
-                    <a class="banner__link" href="#">
-                        <div class="banner__overlay banner--radius">
-                            <div class="banner__content banner__content--secondary">
-                                <h1 class="banner__title banner__title--secondary">Post title</h1>
-                                <p class="banner__short banner__short--secondary"> {{ "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam eveniet omnis vitae. Totam facere maxime magni impedit magnam voluptatem saepe numquam vel, fuga pariatur labore vitae corporis exercitationem, quo inventore earum autem eius sapiente neque expedita quis quasi ut possimus sed! Distinctio voluptatum itaque fuga laborum ad rerum voluptas possimus!" | truncate: 100, "..." }}</p>
-                                <p>
-                                    <span class="banner__author">Author: </span>
-                                    <span class="banner__author banner__author--name">Dave Donor</span>
-                                </p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                {% include banner.html type='secondary' image='assets/img/temp/waterfall.jpeg'
+                maxLength='100'
+                author='Dave Donor'
+                title='Post Title'
+                brief='Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam unde sunt beatae quisquam, ad repudiandae nobis molestias quis nam ea, atque recusandae eaque placeat rem optio natus aliquid porro hic quam. Reiciendis corporis harum quibusdam expedita eius, qui doloribus distinctio tempore quod. Beatae tempore ipsum molestias deleniti. Voluptatibus maiores, quis iure aliquid unde alias fugiat illo praesentium voluptates sed quos tempora vero laudantium perspiciatis animi aspernatur nobis molestias ducimus accusantium officiis est nostrum voluptatem dolores libero. Ratione quo repellendus rerum atque nihil, expedita nisi doloribus sapiente non voluptas porro quisquam nam eos? Reprehenderit dolores reiciendis pariatur inventore repellendus repellat doloremque ex unde veritatis illo asperiores, dolore fugiat velit consectetur impedit sed non quisquam vitae, maiores alias ducimus, incidunt temporibus laudantium! Praesentium alias repellat, voluptate ad beatae voluptatibus magni delectus? Mollitia velit quos ipsa minus nam. Harum ipsam, magni quisquam ab eos distinctio molestiae odit sunt aliquam et voluptate. Dolorum ipsam accusamus nobis architecto temporibus, quia, facilis laborum voluptatem deleniti amet quaerat ducimus? Est, itaque deleniti? Earum eius veritatis fuga, nesciunt facere, odio modi similique vitae, incidunt asperiores recusandae repudiandae rerum repellat dicta soluta. Obcaecati, dolorem sit atque numquam reprehenderit vel quo repellendus voluptate aliquid nemo fugiat dolores! Ipsa quia quisquam fuga, tempora nisi ratione totam consequuntur dolorem beatae velit? Quod tenetur praesentium totam impedit corrupti exercitationem mollitia voluptatibus ut possimus. Deleniti unde quo nemo doloribus veniam deserunt modi vel quaerat quod at ducimus, totam similique? Cupiditate ipsum velit quod hic consequuntur ut, ab expedita nulla officiis voluptatem labore? Dolores, fugiat, molestiae dolore exercitationem id animi quaerat asperiores quae optio odio facilis omnis ea corrupti suscipit eveniet atque temporibus ipsam facere ipsum expedita, a nulla. Mollitia et tempore accusamus eligendi nulla, voluptatum vitae facere commodi quisquam veniam aliquam aperiam? Neque animi magni cumque culpa earum accusamus aliquid quae doloremque, consequuntur sapiente aperiam eaque possimus debitis incidunt, ut, soluta corporis ipsum. Autem facere at perspiciatis tempora in saepe molestiae unde magnam, eaque laborum laudantium et doloribus vero temporibus odit? Necessitatibus similique, nisi nihil ea commodi quisquam autem iure enim harum veniam quibusdam aliquam ut libero possimus voluptas totam repellat illum non!' %}
+                {% include banner.html type='secondary' image='assets/img/temp/sunset.jpeg'
+                maxLength='100'
+                author='Dave Donor'
+                title='Post Title'
+                brief='Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi magnam unde sunt beatae quisquam, ad repudiandae nobis molestias quis nam ea, atque recusandae eaque placeat rem optio natus aliquid porro hic quam. Reiciendis corporis harum quibusdam expedita eius, qui doloribus distinctio tempore quod. Beatae tempore ipsum molestias deleniti. Voluptatibus maiores, quis iure aliquid unde alias fugiat illo praesentium voluptates sed quos tempora vero laudantium perspiciatis animi aspernatur nobis molestias ducimus accusantium officiis est nostrum voluptatem dolores libero. Ratione quo repellendus rerum atque nihil, expedita nisi doloribus sapiente non voluptas porro quisquam nam eos? Reprehenderit dolores reiciendis pariatur inventore repellendus repellat doloremque ex unde veritatis illo asperiores, dolore fugiat velit consectetur impedit sed non quisquam vitae, maiores alias ducimus, incidunt temporibus laudantium! Praesentium alias repellat, voluptate ad beatae voluptatibus magni delectus? Mollitia velit quos ipsa minus nam. Harum ipsam, magni quisquam ab eos distinctio molestiae odit sunt aliquam et voluptate. Dolorum ipsam accusamus nobis architecto temporibus, quia, facilis laborum voluptatem deleniti amet quaerat ducimus? Est, itaque deleniti? Earum eius veritatis fuga, nesciunt facere, odio modi similique vitae, incidunt asperiores recusandae repudiandae rerum repellat dicta soluta. Obcaecati, dolorem sit atque numquam reprehenderit vel quo repellendus voluptate aliquid nemo fugiat dolores! Ipsa quia quisquam fuga, tempora nisi ratione totam consequuntur dolorem beatae velit? Quod tenetur praesentium totam impedit corrupti exercitationem mollitia voluptatibus ut possimus. Deleniti unde quo nemo doloribus veniam deserunt modi vel quaerat quod at ducimus, totam similique? Cupiditate ipsum velit quod hic consequuntur ut, ab expedita nulla officiis voluptatem labore? Dolores, fugiat, molestiae dolore exercitationem id animi quaerat asperiores quae optio odio facilis omnis ea corrupti suscipit eveniet atque temporibus ipsam facere ipsum expedita, a nulla. Mollitia et tempore accusamus eligendi nulla, voluptatum vitae facere commodi quisquam veniam aliquam aperiam? Neque animi magni cumque culpa earum accusamus aliquid quae doloremque, consequuntur sapiente aperiam eaque possimus debitis incidunt, ut, soluta corporis ipsum. Autem facere at perspiciatis tempora in saepe molestiae unde magnam, eaque laborum laudantium et doloribus vero temporibus odit? Necessitatibus similique, nisi nihil ea commodi quisquam autem iure enim harum veniam quibusdam aliquam ut libero possimus voluptas totam repellat illum non!' %}
             </header>
         </section>
 
