--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -44,6 +44,8 @@ html {
     min-height: 100%;
     grid-row-start: 2;
     grid-row-end: 3;
+    display: flex;
+    flex-direction: column;
   }
   
   .link {
@@ -52,10 +54,13 @@ html {
   }
 
   .section {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+
     &__title { 
       font-family: "Inter";
       font-size: 1.75rem;
-      margin: 1rem 0 3rem 0;
+      margin: 0 0 3rem 0;
       text-shadow: 0px 0px 4px black;
     }
   }
