--- a/_includes/post.html
+++ b/_includes/post.html
@@ -4,7 +4,7 @@
     <img class="post__image" src="{{ include.image }}">
     <div class="post__container">
     <h2 class="post__title">{{ include.title }}</h2>
-    <p class="post__brief">{{ brief | truncate: 300 , "..." }}</p>
+    <p class="post__brief">{{ brief | strip_html | truncate: 300 , "..." }}</p>
     <span class="post__author">Author: </span>
     <span class="post__author post__author--name">{{ include.author }}</span>
     </div>
