--- a/_includes/social_icon.html
+++ b/_includes/social_icon.html
@@ -1,4 +1,6 @@
 <div class="social">
     <img class="social__background"/>
-    <img class="social__icon social__icon--{{ include.social }}" alt="{{ include.social }}" />
+    <div class="social__container">
+        <img class="social__icon social__icon--{{ include.social }}" alt="{{ include.social }}" />
+    </div>
 </div>
